# secure-messenger

./: .dockerignore  .gitignore  .kilocodemodes  DOCKER.md  QUICKSTART.md  README.md  docker-compose.yml  project-requirements.md
backend/: .dockerignore  .env.example  Dockerfile  db_init.py  generate_env.py  pyproject.toml
backend/app/: config.py  create_tables.py  db.py  db_init.py  dependencies.py  exceptions.py  main.py
backend/app/crud/: audit.py  messages.py  tokens.py  users.py
backend/app/models/: __init__.py  attachment.py  audit.py  message.py  refreshtoken.py  user.py  users.py
backend/app/routers/: auth.py  honeypot.py  messages.py  totp.py  users.py
backend/app/schemas/: auth.py  message.py  totp.py
backend/app/utils/: hash_password.py  manage_tokens.py  password_hasher.py  tokens_manager.py  totp_manager.py
backend/tests/: conftest.py  test_auth.py  test_message.py  test_totp.py
backend/tests/utils/: helpers.py
docs/: opis-projektu.md
frontend/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/guards/: auth.guard.ts  guest.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/services/: auth.service.ts  crypto.service.ts  message.service.ts  totp.service.ts
frontend/src/environments/: environment.ts
nginx/: Dockerfile  generate-ssl.sh  nginx.conf
(+27 files in other folders)
