[project]
name = "secure-messenger-backend"
version = "0.1.0"
description = "Secure Messenger Backend"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.112.1",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
]
