[project]
name = "secure-messenger-backend"
version = "0.1.0"
description = "Secure Messenger Backend"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.112.1",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "pyotp>=2.9.0",
    "python-jose>=3.5.0",
    "qrcode>=8.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
]
